--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,6 +15,8 @@
 .titulo h1{
 	font-size: 80px;
 	text-transform: uppercase;
+	font-family: 'Playfair+Display';
+}
 }
 .titulo h2{
 	margin-top: 10px;
@@ -25,7 +27,6 @@
 	background-color: #e1e1e1;
 	margin-bottom: 0px !important;
 	border-radius: 0px !important;
-	
 }
 .navbar .navbar-nav{
 display: table;
